# matrix-share

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  events.rs  iroh_transfer.rs  lib.rs  main.rs  matrix_client.rs  state.rs  transfer.rs
src/components/: CircularProgress.tsx  FileIcon.tsx  FileOffer.tsx  FileSend.tsx  Layout.tsx  Login.tsx  MemberBar.tsx  Room.tsx  RoomList.tsx  TransferHistory.tsx  TransferProgress.tsx
src/hooks/: useMatrix.ts  useRooms.ts  useTransfer.ts
src/types/: index.ts
