[package]
name = "matrix-fileshare"
version = "0.1.0"
edition = "2021"

[lib]
name = "matrix_fileshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
matrix-sdk = { version = "0.10", features = ["e2e-encryption", "sqlite"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
iroh = "0.96"
iroh-blobs = "0.98"
